# tls-fingerprint-scraper-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: why-tls-fingerprint.md
scripts/: live_demo.py
src/tlsdemo/: __init__.py  compare.py  fingerprint.py
tests/: conftest.py  test_compare.py  test_fingerprint.py
tests/fixtures/: peet_chrome.json  peet_plain.json
