[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-fingerprint-scraper-demo"
version = "0.1.0"
description = "Educational demo: empty results behind Cloudflare are often a TLS fingerprint check, not a CAPTCHA."
requires-python = ">=3.9"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest"]
impersonate = ["curl_cffi"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
